--- a/alexanderristinmaa/app/globals.css
+++ b/alexanderristinmaa/app/globals.css
@@ -37,6 +37,11 @@ body {
   color: var(--black);
 }
 
+body {
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;  
+}
+
 a {
   color: inherit;
   text-decoration: none;
